Version 2016121401
First release of Snippet