@@ -24,10 +24,9 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2016121403;        // The current plugin version (Date: YYYYMMDDXX).
-$plugin->requires  = 2013110500;        // Requires this Moodle version.
+$plugin->version   = 2017040101;        // The current plugin version (Date: YYYYMMDDXX).
+$plugin->requires  = 2014051200;        // Requires this Moodle version.
 $plugin->component = 'atto_snippet';  // Full name of the plugin (used for diagnostics).
-$plugin->maturity  = MATURITY_BETA;
-// Human readable version informatiomn
-$plugin->release   = '1.0.2 (Build 2016121403)';
-
+$plugin->maturity  = MATURITY_STABLE;
+// Human readable version information
+$plugin->release   = '1.0.3 (Build 2017040101)';
